<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="1dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:background="@drawable/bg_card">

    <!-- Header Row -->
    <TextView
        android:id="@+id/tvSymbol"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/symbol"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/tvLtp"
        app:layout_constraintEnd_toStartOf="@+id/tvLtp"
        app:layout_constraintHorizontal_weight="1" />

    <TextView
        android:id="@+id/tvLtp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ltp"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@id/tvSymbol"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvAvgQty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantity"
        android:textSize="12sp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/tvSymbol"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tvInvested"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/p_and_l"
        android:textSize="12sp"
        android:paddingBottom="5dp"
        app:layout_constraintBaseline_toBaselineOf="@id/tvAvgQty"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Expanded Layout -->
    <LinearLayout
        android:id="@+id/expandedLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        android:paddingTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/tvSymbol"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tvAvgQtyE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvInvestedE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
