<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvNoHolding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_holding"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/blue"
        android:elevation="4dp"
        app:title="@string/portfolio"
        app:titleTextColor="@color/white"
        app:contentInsetStart="0dp"
        app:contentInsetStartWithNavigation="0dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/top_view"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:src="@drawable/top_bar"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <LinearLayout
        android:id="@+id/searchBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        android:background="@android:color/white"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="8dp">

        <EditText
            android:id="@+id/etSearch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/search_symbol"
            android:imeOptions="actionSearch"
            android:background="@drawable/bg_edittext_search"
            android:singleLine="true"
            android:inputType="text"
            android:textColor="@android:color/black"/>

        <ImageView
            android:id="@+id/ivClearSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_close_clear_cancel"
            android:paddingRight="8dp"
            android:paddingLeft="8dp"/>
    </LinearLayout>


    <!-- Recycler inside SwipeRefresh -->
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/top_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/summaryCard">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvHoldings"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="8dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <!-- Summary Card at bottom -->
    <LinearLayout
        android:id="@+id/summaryCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/bg_summary_card"
        app:layout_constraintBottom_toTopOf="@+id/bottomBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Expanded Section (Initially hidden) -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/expandedSection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:visibility="gone">

            <TextView
                android:id="@+id/tvCurrent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_value"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:padding="6dp"/>

            <TextView
                android:id="@+id/tvCurrentValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:padding="6dp"/>

            <TextView
                android:id="@+id/tvTotalInvestment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_investment"
                android:textColor="@color/black"
                android:padding="6dp"
                android:layout_marginTop="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvCurrent" />

            <TextView
                android:id="@+id/tvTotalInvestmentValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:padding="6dp"
                android:layout_marginTop="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvCurrent" />

            <TextView
                android:id="@+id/tvTodayPnl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/today_s_profit_and_loss"
                android:textColor="@color/black"
                android:padding="6dp"
                android:layout_marginTop="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTotalInvestment" />

            <TextView
                android:id="@+id/tvTodayPnlValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:padding="6dp"
                android:layout_marginTop="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTotalInvestment" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintTop_toBottomOf="@+id/tvTodayPnl"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Always visible row -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/summaryToggleRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvTotalPnl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/total_p_l"
                android:textColor="@color/black"
                android:paddingTop="8dp"
                android:paddingStart="8dp"
                android:paddingEnd="0dp"
                android:paddingBottom="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <ImageView
                android:id="@+id/ivToggle"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/arrow_up"
                android:layout_marginTop="3dp"
                app:layout_constraintLeft_toRightOf="@+id/tvTotalPnl"
                app:layout_constraintTop_toTopOf="@+id/tvTotalPnl"
                app:layout_constraintBottom_toBottomOf="@+id/tvTotalPnl"/>

            <TextView
                android:id="@+id/tvTotalpnlValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:padding="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:id="@+id/bottomBar"
        android:background="@drawable/bottom_bar"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
